--- a/AirsoftRUs/Pages/Index.cshtml
+++ b/AirsoftRUs/Pages/Index.cshtml
@@ -5,6 +5,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>
+        <img src="~/images/squad.png" height="300px"/>
+    </p>
+    <p>
+        Welcome to ASAP Airsoft! This website features an assortment of options. From shopping to fields and their rules. All of that info is located here!
+    </p>
 </div>
